# VsData_Dictation

./: .gitignore  CMakeLists.txt
Slice Tracking with Dictation/: CMakeLists.txt  Tracker.py  requirements.txt
Slice Tracking with Dictation/Libs/: LogicLib.py  WidgetLib.py
Slice Tracking with Dictation/Resources/Python/: audio_recorder_script.py
Slice Tracking with Dictation/Resources/UI/: Tracker.ui
Slice Tracking with Dictation/Testing/: Test.py
Slice Tracking with Dictation/Utils/: AnatomyDetectionAPI.py  AudioRecorder.py  AudioTranscriber.py  CurveAnalyzer.py  CurveAnalyzer_.py  MedicalNER.py  PlotGenerator.py  SAMSegmenter.py  SliceProcess.py  TimeAlignment.py  __init__.py
server/: README.md  main.py  merge_segmentation.py  requirements.txt  test_api.py  test_pipeline.py
server/api/: __init__.py  endpoints.py
server/modules/: __init__.py  curve_analyzer.py  mask_processor.py  medical_ner.py  pipeline.py  sam_segmenter.py  time_alignment.py  totalsegmentator_service.py
server/scripts/: download_models.py
server/utils/: file_handler.py  html_to_csv.py  nrrd_extractor.py  organ_mapping.py
